grafana/Pod.grafana-test.k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 12.3.1
    helm.sh/chart: grafana-10.7.0
  name: grafana-test
  namespace: default
spec:
  containers:
    - command:
        - /opt/bats/bin/bats
        - -t
        - /tests/run.sh
      image: docker.io/bats/bats:1.13.0
      imagePullPolicy: IfNotPresent
      name: grafana-test
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
  restartPolicy: Never
  serviceAccountName: grafana-test
  volumes:
    - configMap:
        name: grafana-test
      name: tests
