grafana/Service.grafana.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 13.1.3
    helm.sh/chart: grafana-12.10.4
  name: grafana
  namespace: grafana
spec:
  ports:
    - name: service
      port: 3000
      protocol: TCP
      targetPort: grafana
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  type: ClusterIP
