grafana/HTTPRoute.grafana.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  hostnames:
    - grafana.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
