grafana/Ingress.grafana.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 12.3.1
    helm.sh/chart: grafana-10.7.0
  name: grafana
  namespace: grafana
spec:
  rules:
    - host: grafana.madhan.app
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.madhan.app
      secretName: grafana-tls
